--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -128,6 +128,35 @@
   display: none;
 }
 
+.navbarIconContainer {
+  position: relative;
+  cursor: pointer;
+  margin-right: 10px;
+  color: #fff;
+}
+
+.navIconBadge {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: -5px;
+  right: 0px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+}
+
+.navAvatar {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1050px) {
   .mkz__navbar-links_container {
     display: none;
